--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,13 @@ android {
 
 dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+
     compile 'com.google.android:support-v4:r7'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
 
+    // *** DO NOT USE THESE CONFIG, OR CONFLICT WITH actionbarsherlock ***
+    // You must install or update the Google Repository through the SDK manager to use this dependency.
+    //compile 'com.google.android.gms:play-services:4.2.42'
+    //compile 'com.android.support:appcompat-v7:19.+'
 }
