--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
+
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "20.0.0"
-
+    buildToolsVersion '20.0.0'
     defaultConfig {
-        applicationId "com.runbytech.simameet"
+        applicationId 'com.runbytech.simameet'
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
@@ -17,11 +17,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
+
+    //FIXME, plugin BUG: Duplicate files copied in APK META-INF/NOTICE...
+    //@2014/09/24
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
-dependencies {
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
 
+dependencies {
+    //    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile project(':igeniecomm')
 
     compile 'com.google.android:support-v4:r7'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
