--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,4 +44,7 @@
     <!--access internet-->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--write log-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
