--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 14
     buildToolsVersion '20.0.0'
     defaultConfig {
         applicationId 'com.runbytech.simameet'
-        minSdkVersion 15
-        targetSdkVersion 19
+        minSdkVersion 11
+        targetSdkVersion 14
         versionCode 1
         versionName '1.0'
     }
@@ -29,6 +29,11 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+
+    // This is important, it will run lint checks but won't abort build
+    lintOptions {
+        abortOnError false
+    }
 }
 
 
@@ -40,6 +45,7 @@ dependencies {
     compile 'com.google.android:support-v4:r7'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'se.emilsjolander:stickylistheaders:2.5.1'
+    compile 'com.joanzapata.android:android-iconify:1.0.6'
 
     // *** DO NOT USE THESE CONFIG, OR CONFLICT WITH actionbarsherlock ***
     // You must install or update the Google Repository through the SDK manager to use this dependency.
